--- a/style.css
+++ b/style.css
@@ -50,12 +50,38 @@ section h4{
     border: none ;
     outline: none;
     width: 100%;
-    height: 25px;
-    padding: 0.5%;
+    height: 20px;
+    padding: 1%;
 
 }
 
 h4 input{
     margin: 0% 1% 0% 0%;
     border-radius: 50%;
+}
+
+textarea{
+    border-radius: 2px;
+    border: none ;
+    outline: none;
+    width: 98%;
+    height: 90px;
+    padding: 2%;
+}
+
+.selecter{
+    border-radius: 2px;
+    border: none ;
+    outline: none;
+    width: 102%;
+    height: 30px;
+    padding: 1%;  
+}
+
+button{
+    width: 102%;
+    background:#37af65;
+    border: none;
+    height: 30px;
+    color: white;
 }
