--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 
 *{
     margin: 0;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Mulish', sans-serif;
     outline: none;
 }
 
 body{
-    font-family: 'Lato', sans-serif;
+    font-family: 'Mulish', sans-serif;
     padding: 1.5% 0.5%;  
     text-align: center;
     color: white;
@@ -35,6 +36,7 @@ section{
     background-color: #2a2a4a;
     width: 30%;
     padding: 2%;
+    border-radius: 5px;
 }
 section div{
     margin: 2% 0 2% 0;
@@ -52,6 +54,7 @@ section h4{
     width: 100%;
     height: 20px;
     padding: 1%;
+    text-transform: capitalize;
 
 }
 
@@ -67,9 +70,12 @@ textarea{
     width: 98%;
     height: 90px;
     padding: 2%;
+    text-transform: capitalize;
+    
 }
 
 .selecter{
+    color:grey;
     border-radius: 2px;
     border: none ;
     outline: none;
